# amazon-price-tracker

./: pyproject.toml
src/: amazon_scraper.py  email_handler.py  main.py
src/data/: Amazon Price Tracker.csv
