[tool.poetry]
name = "amazon-price-tracker"
version = "0.1.0"
description = ""
authors = ["Brenton Moraida <26958105+bmoraida@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
lxml = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
